--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
     --font-family: 'Gilroy', sans-serif;
     --main-color: #070707;
     --un-active-color: #828282;
+    --bg-color: #f6f6f6;
 }
 
 body {
@@ -25,6 +26,15 @@ body {
     font-weight: 500;
     font-size: 18px;
     color: var(--main-color);
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
 }
 
 .list-reset {
@@ -41,6 +51,14 @@ body {
     max-width: 970px;
     padding: 0 15px;
     margin: 0 auto;
+}
+
+.bg-img {
+    background-image: url('../images/hero-bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
 }
 
 /* === header === */
@@ -113,14 +131,33 @@ body {
 }
 
 .hero-img {
-    background-image: url('../images/hero-bg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
     height: 387px;
 }
 
+/* === about-me === */
 
+.about-me {
+    background-color: var(--bg-color);
+    text-align: center;
+}
 
+.title {
+    font-size: 34px;
+    font-weight: 700;
+    line-height: 42px;
+    margin-bottom: 18px;
+    padding-top: 120px;
+}
 
+.about-me__text {
+    padding-bottom: 107px;
+}
+
+.about-me__text-item {
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.about-me__text-item:not(:last-child) {
+    margin-bottom: 42px;
+}
