--- a/styles/style.css
+++ b/styles/style.css
@@ -169,10 +169,11 @@ p {
 .skills {
     text-align: center;
     margin-bottom: 50px;
+    padding-top: 91px;
 }
 
 .skills-title {
-    margin: 91px 0 69px;
+    margin: 0 0 69px;
 }
 
 .skills-text {
@@ -304,9 +305,12 @@ p {
     .skills-first__wrapper {
         margin-right: 0px;
     }
+    .skills__item {
+        margin-right: 0px;
+    }
 }
 
-@media (max-width: 400px){
+@media (max-width: 450px){
     .skills__item:nth-child(odd){
         margin-right: 0px;
     }
